# cpp_bzl_example

./: .gitignore  MODULE.bazel
lib/: BUILD  letter_sorter.cc  letter_sorter.h  letter_sorter_test.cc
main/: BUILD  hello_sorted_main.cc
