bazel_dep(name = "rules_cc", version = "0.1.1")

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20250512.1")
